# cinchdb

./: .gitignore  .notes  CLAUDE.md  DESIGN.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.claude-memory/: CLAUDE-activeContext.md  CLAUDE-decisions.md  CLAUDE-patterns.md  CLAUDE-proposal.md  CLAUDE-temp.md  CLAUDE-troubleshooting.md
.claude/agents/: api-documenter.md  backend-typescript-architect.md  deployment-engineer.md  frontend-engineer.md  python-backend-engineer.md  test-automator.md
.github/workflows/: README.md  deploy-docs.yml  docs.yml
docs/: AUTOMATED_VERSION_DOCS.md  hooks.py  index.md  package.json
docs/api/: authentication.md  deployment.md  endpoints.md
docs/cli/: branch.md  codegen.md  column.md  data.md  database.md  index.md  index_commands.md  kv.md  project.md  query.md  remote.md  table.md  tenant.md  view.md
docs/concepts/: branching.md  change-tracking.md  constraints.md  multi-tenancy.md  naming-conventions.md  remote-access.md  security.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/python-sdk/: api-reference.md  branches.md  connection.md  index.md  kv-store.md  queries.md  tables.md  tenants.md
docs/tutorials/: multi-tenant-app.md  remote-deployment.md  schema-branching.md
examples/: README.md  sdk_operations_demo.py  storage_optimization.py  unified_interface_demo.py
examples/cli/: branch_workflow.sh  getting_started.sh  multi_tenant.sh
examples/python/: basic_usage.py  branch_workflow.py  multi_tenant.py  remote_api.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: BUILD_GUIDE.md  build.sh  build_and_publish.py  fix_cli_managers.py  fix_test_fixtures.py  pypi-readme-template.md  run_docs_examples.py  test_docs_examples.py  update_docs_version.py
sdk/typescript/: jest.config.js  package-lock.json  package.json
src/cinchdb/: __init__.py  __main__.py  config.py
tests/: conftest.py  test_cinchdb.py  test_docs_api_signatures.py  test_documentation_examples.py  test_empty_tenant_schema.py  test_kv.py  test_lazy_resources.py  test_metadata_db.py  test_metadata_db_changes.py  test_tenant_manager_metadata.py
tests/integration/: test_branch_change_integration.py  test_cli_integration.py  test_full_workflow.py  test_maintenance_mode.py
tests/unit/: test_api_new_endpoints.py  test_batch_optimization.py  test_boolean_type.py  test_branch_manager.py  test_bulk_operations.py  test_cdc_table_protection.py  test_change_application.py  test_change_comparator.py  test_change_tracker.py  test_cinch_models_unified.py  test_cli_codegen_unified.py  test_cli_data_commands.py  test_cli_data_commands_edge_cases.py  test_cli_foreign_keys.py  test_codegen_enhanced.py  test_codegen_manager.py  test_column_manager.py  test_column_masking.py  test_config.py  test_connection.py  test_convenience_methods.py  test_data_manager.py  test_database.py  test_database_validation.py  test_empty_tenant.py  test_encryption.py  test_foreign_keys.py  test_index_manager.py  test_index_model.py  test_lazy_database.py  test_lazy_defaults.py  test_lazy_edge_cases.py  test_lazy_tenant.py  test_maintenance_mode.py  test_merge_manager.py  test_metadata_db_deletes.py  test_model_query.py  test_models.py  test_name_validator.py  test_page_size_optimization.py  (+14 more)
(+97 files in other folders)
