[project]
name = "cinchdb"
version = "0.1.0"
description = "A Git-like SQLite database management system with branching and multi-tenancy"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["database", "sqlite", "git", "branching", "multi-tenant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "toml>=0.10.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/cinchdb"
Documentation = "https://cinchdb.readthedocs.io"
Repository = "https://github.com/yourusername/cinchdb"
Issues = "https://github.com/yourusername/cinchdb/issues"

[project.scripts]
cinch = "cinchdb.cli.main:app"
cinch-server = "cinchdb.api.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
    "responses>=0.23.0",
]
