[project]
name = "cinchdb"
version = "0.1.5"
description = "A Git-like SQLite database management system with branching and multi-tenancy"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Russell Romney" }
]
license = { text = "MIT" }
keywords = ["database", "sqlite", "git", "branching", "multi-tenant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "toml>=0.10.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/russellromney/cinchdb"
Documentation = "https://russellromney.github.io/cinchdb"
Repository = "https://github.com/russellromney/cinchdb"
Issues = "https://github.com/russellromney/cinchdb/issues"

[project.scripts]
cinch = "cinchdb.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Only include the Python package
include = [
    "src/cinchdb/**/*.py",
    "src/cinchdb/**/*.typed",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# Explicitly exclude other directories
exclude = [
    "docs/",
    "sdk/",
    "site/",
    "examples/",
    "scripts/",
    "tests/",
    ".github/",
    "*.pyc",
    "__pycache__/",
    ".git/",
    ".venv/",
    "dist/",
    "build/",
    "*.egg-info/",
]

[tool.hatch.build.targets.wheel]
# Ensure only Python files are included in wheel
packages = ["src/cinchdb"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
    "responses>=0.23.0",
]
